[package]
name = "nom-bits"
version = "0.1.0"
edition = "2018"
description = "Bit level parsing for nom"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#nom = { git = "https://github.com/Geal/nom.git" }
nom = { version = "6.1.2", default-features = false, features = ["lexical"] }

