[package]
name = "nom-bitvec"
version = "0.1.0"
edition = "2018"
description = "Bit level parsing for nom with bitvec"
license = "MIT"
authors = [ "contact@geoffroycouprie.com" ]
repository = "https://github.com/rust-bakery/nom-bitvec"
readme = "README.md"
documentation = "https://docs.rs/nom-bitvec"
keywords = ["parser", "parser-combinators", "bit"]
categories = ["parsing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
#nom = { git = "https://github.com/Geal/nom.git" }
nom = { version = "7.0.0-alpha1", default-features = false, features = ["lexical"] }

[features]
alloc = []
default = ["alloc"]
